[build-system]
requires = ["setuptools", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "psdaq"
version="4.3"
requires-python = ">=3.8"

[project.scripts]
control = "psdaq.control.control:main"
selectPlatform = "psdaq.control.selectPlatform:main"
showPlatform = "psdaq.control.showPlatform:main"
daqstate = "psdaq.control.daqstate:main"
currentexp = "psdaq.control.currentexp:main"
testClient2 = "psdaq.control.testClient2:main"
testAsyncErr = "psdaq.control.testAsyncErr:main"
testFileReport = "psdaq.control.testFileReport:main"
configdb = "psdaq.configdb.configdb:main"
configdb_GUI = "psdaq.configdb.configdb_GUI:main"
configdb_multimod = "psdaq.configdb.configdb_multimod:configdb_multimod"
epixquad_store_gainmap = "psdaq.configdb.epixquad_store_gainmap:main"
epixquad_create_pixelmask = "psdaq.configdb.epixquad_create_pixelmask:main"
epixhr_config_from_yaml_set = "psdaq.configdb.epixhr_config_from_yaml_set:main"
epixhr_pedestal_scan = "psdaq.cas.epixhr_pedestal_scan:main"
epixhr_chargeinj_scan = "psdaq.cas.epixhr_chargeinj_scan:main"
epixhr_timing_scan = "psdaq.cas.epixhr_timing_scan:main"
epixhr_config_scan = "psdaq.cas.epixhr_config_scan:main"
epixhr_r0acq_scan = "psdaq.cas.epixhr_r0acq_scan:main"
epixquad_chargeinj_scan = "psdaq.cas.epixquad_chargeinj_scan:main"
epixquad_pedestal_scan = "psdaq.cas.epixquad_pedestal_scan:main"
epixuhr_chargeinj_scan = "psdaq.cas.epixuhr_chargeinj_scan:main"
epixuhr_pedestal_scan = "psdaq.cas.epixuhr_pedestal_scan:main"
seq_epixhr = "psdaq.seq.seq_epixhr:main"
generic_timing_scan = "psdaq.cas.generic_timing_scan:main"
getrun = "psdaq.control.getrun:main"
groupca = "psdaq.cas.groupca:main"
xpmpva = "psdaq.cas.xpmpva:main"
xpmpatt = "psdaq.cas.xpmpatt:main"
hsdca = "psdaq.cas.hsdca:main"
hsdcas = "psdaq.cas.hsdcas:main"
hsdpva = "psdaq.cas.hsdpva:main"
hsdpvs = "psdaq.cas.hsdpvs:main"
pvatable = "psdaq.cas.pvatable:main"
pvant = "psdaq.cas.pvant:main"
campvs = "psdaq.cas.campvs:main"
tprca = "psdaq.cas.tprca:main"
tprcas = "psdaq.cas.tprcas:main"
xpmioc = "psdaq.cas.xpmioc:main"
bldcas = "psdaq.cas.bldcas:main"
bldgmd = "psdaq.cas.bldgmd:main"
hpsdbuscas = "psdaq.cas.hpsdbuscas:main"
wave8pvs = "psdaq.cas.wave8pvs:main"
setup_tdrp = "psdaq.cas.setup_tdrp:main"
pytdrp = "psdaq.cas.pytdrp:main"
pytdet_collector = "psdaq.cas.pytdet_collector:main"
pyxpm = "psdaq.pyxpm.pyxpm:main"
pykcuxpm = "psdaq.pyxpm.pykcuxpm:main"
amccpromload = "psdaq.pyxpm.amccpromload:main"
pykcu = "psdaq.pykcu.pykcu:main"
control_gui = "psdaq.control_gui.app.control_gui:control_gui"
bluesky_simple = "psdaq.control.bluesky_simple:main"
opal_config_scan = "psdaq.control.opal_config_scan:main"
ts_config_scan = "psdaq.control.ts_config_scan:main"
timed_run = "psdaq.control.timed_run:main"
epics_exporter = "psdaq.cas.epics_exporter:main"
hsd_epics_exporter = "psdaq.cas.hsd_epics_exporter:main"
hsd_input_select = "psdaq.cas.hsd_input_select:main"
fixed_rate_table = "psdaq.seq.fixed_rate_table:main"
periodicgenerator = "psdaq.seq.periodicgenerator:main"
rixgenerator = "psdaq.seq.rixgeneratory:main"
seqplot = "psdaq.seq.seqplot:main"
seqprogram = "psdaq.seq.seqprogram:main"
traingenerator = "psdaq.seq.traingenerator:main"
ued_seq_setup = "psdaq.seq.ued_seq_setup:main"
bos = "psdaq.bos.bos:main"
prometheus2pvs = "psdaq.cas.prometheus2pvs:main"
prometheusIOC = "psdaq.cas.prometheusIOC:main"
daqmgr = "psdaq.slurm.main:_do_main"
cnf2py = "psdaq.slurm.cnftopy:_do_main"
daqstat = "psdaq.slurm.daqstat:_do_main"
daqlog_header = "psdaq.slurm.daqlog_header:_do_main"
jungfrau_pedestal_scan = "psdaq.cas.jungfrau_pedestal_scan:main"
jungfrau_gain_mode = "psdaq.configdb.jungfrau_gain_mode:change_gain_mode"
jungfrau_protection = "psdaq.configdb.jungfrau_protection:change_protection_settings"
detector_protection_monitor = "psdaq.trigger.detector_protection_monitor:main"
